fix: Fix screen overflow issues for small screen
- Support background inlining in TableWrapper component and use display grid to avoid screen overflow
- Have button panel submit buttons in separate rows to avoid screen overflow
- Fix event card overflow issues

--- a/src/common/components/table/table.module.scss
+++ b/src/common/components/table/table.module.scss
@@ -150,3 +150,15 @@
 .clickableRow {
   composes: clickableRow from '../../../common/components/table/clickableRow.module.scss';
 }
+
+.tableWrapper {
+  display: grid;
+
+  &.inlineWithBackground {
+    margin-top: calc(0px - var(--spacing-2-xl) + 4px);
+
+    @include medium-up {
+      margin-top: calc(0px - var(--spacing-2-xl) - 2px);
+    }
+  }
+}
