--- a/src/domain/registrations/registrationList/registrationList.module.scss
+++ b/src/domain/registrations/registrationList/registrationList.module.scss
@@ -3,11 +3,6 @@
   margin-top: var(--spacing-2-xl);
 }
 
-.tableWrapper {
-  display: grid;
-  margin-top: calc(0px - var(--spacing-2-xl) - 2px);
-}
-
 .count {
   display: grid;
   align-content: center;
